feat: add adaptive for donation page / 1000px

--- a/online-zoo/assets/styles/layout/animal.scss
+++ b/online-zoo/assets/styles/layout/animal.scss
@@ -1,5 +1,19 @@
+
 .animal__bg {
     display: block;
     width: 100%;
     height: 100%;
+    @media(max-width: 1000px) {
+        width: auto;
+        margin-left: -170px;
+    }
+}
+@media(max-width: 1000px) {
+    .animal {
+       height: 390px; 
+    }
+    .animal__img-wrap {
+        width: 100%;
+        overflow: hidden;
+    }
 }
