--- a/online-zoo/pages/donate/donate.css
+++ b/online-zoo/pages/donate/donate.css
@@ -7,6 +7,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+.container {
+  width: 72.5%;
+  margin: 0 auto;
+}
+
 @media (max-width: 1000px) {
   .container {
     width: 94%;
@@ -94,11 +99,31 @@ h1 {
   width: 100%;
   height: 100%;
 }
+@media (max-width: 1000px) {
+  .animal__bg {
+    width: auto;
+    margin-left: -170px;
+  }
+}
 
+@media (max-width: 1000px) {
+  .animal {
+    height: 390px;
+  }
+  .animal__img-wrap {
+    width: 100%;
+    overflow: hidden;
+  }
+}
 .feed-friend {
   background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   padding-top: 40px;
   padding-bottom: 180px;
+}
+@media (max-width: 1000px) {
+  .feed-friend {
+    padding-bottom: 30px;
+  }
 }
 .feed-friend .feed-friend__title1 {
   font-weight: 400;
@@ -106,12 +131,22 @@ h1 {
   line-height: 130%;
   color: #FFFFFF;
 }
+@media (max-width: 1000px) {
+  .feed-friend .feed-friend__title1 {
+    margin-right: 100px;
+  }
+}
 .feed-friend p {
   margin: 10px 0 40px;
   font-weight: 500;
   font-size: 16px;
   line-height: 140%;
   color: #FFFFFF;
+}
+@media (max-width: 1000px) {
+  .feed-friend p {
+    margin: 30px 0 40px;
+  }
 }
 .feed-friend .feed-friend__title2 {
   font-weight: 400;
@@ -131,6 +166,12 @@ h1 {
   line-height: 140%;
   color: #333B41;
 }
+@media (max-width: 1000px) {
+  .feed-friend__feed {
+    padding: 20px 44px 46px 47px;
+    margin-top: 40px;
+  }
+}
 .feed-friend__feed h2 {
   font-weight: 400;
   font-size: 48px;
@@ -140,15 +181,29 @@ h1 {
 }
 .feed-friend__feed .feed-friend__subtitle-h2 {
   margin: 20px 0 60px;
+  font-weight: 400;
   font-size: 24px;
   line-height: 120%;
+  color: #333B41;
+}
+@media (max-width: 1000px) {
+  .feed-friend__feed .feed-friend__subtitle-h2 {
+    margin: 10px 0 60px;
+  }
 }
 .feed-friend__feed p {
   margin: 48px 0 17px;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 140%;
-  color: #333B41;
+  color: #000000;
+}
+@media (max-width: 1000px) {
+  .feed-friend__feed p {
+    margin: 48px 0 17px 20px;
+    font-weight: 400;
+    color: #000000;
+  }
 }
 .feed-friend__feed .feed-friend__diet-day {
   display: flex;
@@ -200,12 +255,22 @@ h1 {
   border-radius: 2px;
   margin: 0 auto;
 }
+@media (max-width: 1000px) {
+  .progress-bar {
+    width: 810px;
+  }
+}
 .progress-bar .progress-bar__line {
   display: flex;
   align-items: center;
   width: 915px;
   height: 2px;
   background: #72828E;
+}
+@media (max-width: 1000px) {
+  .progress-bar .progress-bar__line {
+    width: 785px;
+  }
 }
 
 .progress-bar__ellipse-row {
@@ -216,6 +281,12 @@ h1 {
   position: relative;
   left: 50px;
   top: -28px;
+}
+@media (max-width: 1000px) {
+  .progress-bar__ellipse-row {
+    width: 890px;
+    left: 40px;
+  }
 }
 .progress-bar__ellipse-row .progress-bar__point {
   display: flex;
